created scripts.js and modified index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -20,7 +19,7 @@
     </form>
 
     <ul class="shopping-list">
-      <li>
+      <li class="shopping-entry">
         <span class="shopping-item">apples</span>
         <div class="shopping-item-controls">
           <button class="shopping-item-toggle">
@@ -31,7 +30,7 @@
           </button>
         </div>
       </li>
-      <li>
+      <li class="shopping-entry">
         <span class="shopping-item">oranges</span>
         <div class="shopping-item-controls">
           <button class="shopping-item-toggle">
@@ -53,7 +52,7 @@
           </button>
         </div>
       </li>
-      <li>
+      <li class="shopping-entry">
         <span class="shopping-item">bread</span>
         <div class="shopping-item-controls">
           <button class="shopping-item-toggle">
@@ -66,6 +65,7 @@
       </li>
     </ul>
   </div>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
